# VoxelCraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  VoxelCraft.sln  VoxelCraft.vcxproj  VoxelCraft.vcxproj.filters
proj/CopyResources/: CopyResources.vcxproj  Main.cpp
proj/Game/: Entry.cpp  Game.vcxproj  Main.cpp
proj/Headless/: Entry.cpp  Headless.vcxproj  Main.cpp
proj/VoxelCraft/: Main.cpp  VoxelCraft.vcxproj  VoxelCraft.vcxproj.filters  vcpch.hpp
proj/VoxelCraft/client/: Camera.cpp  Camera.hpp  ChunkManager.cpp  ChunkStrategy.cpp  ChunkStrategy.hpp  ClientChunkManager.cpp  ClientChunkManager.hpp
proj/VoxelCraft/common/: Application.cpp  Application.hpp  BlockData.hpp  Chunk.cpp  Chunk.hpp  Player.cpp  Player.hpp  Timer.cpp  Timer.hpp  Transform.hpp
proj/VoxelCraft/game/: GameClientLayer.cpp  GameClientLayer.hpp  GameServerLayer.cpp  GameServerLayer.hpp  GameWorld.cpp  GameWorld.hpp
proj/VoxelCraft/gameplay/: Command.hpp  GameLayer.cpp  GameLayer.hpp  GameModel.cpp  GameModel.hpp  GamePacket.hpp  GameView.cpp  GameView.hpp
proj/VoxelCraft/net/: Address.hpp  Client.cpp  Client.hpp  ClientLayer.cpp  ClientLayer.hpp  Server.cpp  Server.hpp  ServerLayer.cpp  ServerLayer.hpp
proj/VoxelCraft/server/: Server.cpp  Server.hpp
proj/VoxelCraft/utils/: Bitmask.hpp  Helper.hpp  (+4 more)
props/: BuildSettings.props  VoxelCraftStatic.props
res/shaders/: Face.glsl  debug.frag  debug.vert  default.frag  default.fs  default.vert  default.vs  face.frag  face.vert  sky.frag  sky.vert  star.frag  star.vert
scripts/: copyFromTo.bat  deleteFolder.bat
src/: Entry.cpp  GameLayer.cpp  GameLayer.h  Main.cpp  Sandbox.cpp  vcpch.hpp
src/Client/: Face.cpp  Face.h  PlayerInput.cpp  PlayerInput.h  Primitive.cpp  Primitive.h
src/Common/: BlockData.h  ClientLayer.h  Command.h  GameLayer.cpp  GameLayer.h  GamePacket.h  NetworkLayer.h  Player.cpp  Player.h  ServerLayer.h  World.h
src/Net/: Client.cpp  Client.h  Network protocol.md  NetworkLayer.h  Packet.cpp  Packet.h  Server.cpp  Server.h
src/client/: Block.hpp  BlockData.hpp  Camera.cpp  Camera.hpp  Chunk.cpp  Chunk.hpp  ChunkManager.cpp  ChunkManager.hpp
src/common/: Chunk.hpp  Engine.cpp  Engine.hpp  Transform.hpp
src/engine/: Engine.cpp  Engine.hpp
src/graphics/: Buffer.hpp  Camera.cpp  Camera.hpp  Renderable.cpp  Renderable.h  Renderable.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Texture.cpp  Texture.hpp  TextureAtlas.cpp  TextureAtlas.hpp
src/utils/: Math.hpp  Shader.cpp  Shader.hpp
(+48 files in other folders)
